--- a/styles/sass/sections/_contact.scss
+++ b/styles/sass/sections/_contact.scss
@@ -1,77 +1,95 @@
 .contact-container{
-     width: 100vw;
+     width: 100%;
      height: 100vh;
 
      display: flex;
 
-     &__navigation{
-          width: 10%;
+     &__content{
+          padding-left: 5em;
+          
+          width: 50%;
           height: 100%;
 
           display: flex;
-          justify-content: center;
-          align-items: center;
+          flex-direction: column;
+
+          &__email{
+               width: 100%;
+               height: 80vh;
+
+               display: flex;
+               flex-direction: column;
+               justify-content: center;
+
+               > h2{
+                    margin-bottom: 15px;
+                    font-size: 3em;
+                    text-transform: uppercase;
+               }
+
+               .email{
+                    color: $brightYellow;
+                    font-size: 1.3em;
+               }
+          }
 
           &__links{
-               width: 5em;
-               height: 30%;
-               border-right: 2px solid rgb(234, 234, 234);
+               width: 100%;
+               height: 20vh;
 
                &__list{
                     width: 100%;
                     height: 100%;
 
                     display: flex;
-                    flex-direction: column;
-                    justify-content: space-evenly;
                     align-items: center;
 
-                    list-style: none;
+                    &-items{
+                         margin-right: 4em;
 
-                    a > i{
-                         font-size: 1.3em;
+                         list-style-type: none;
+                         text-transform: uppercase;
+                         animation: 3s ease-in;
 
-                         &:hover {
+                         > a:hover{
                               color: $brightYellow;
-                              transition: 0.6s ease-out;
+                              transition: .3s ease-out;
                          }
                     }
                }
           }
+
+          a{
+               text-decoration: none;
+               color: $charlestonGreen;
+          }
      }
 
      &__hero{
-          width: 90%;
-          height: 100%;
+          width: 50%;
+          height: 100vh;
 
-          position: relative;
+          display: flex;
+          align-items: center;
+          justify-content: center;
 
-          &-content{
-               position: absolute;
-               top: 50%;
-               left: 50%;
-               transform: translate(-50%, -50%);
-               z-index: 10;
+          overflow: hidden;
+          
+          &-reveal{
+               max-width: 500px;
+               height: 80%;
 
-               > h2{
-                    font-size: 8vw;
-                    font-weight: 600;
-                    text-transform: uppercase;
-                    text-align: right;
-                    color: transparent;
-                    -webkit-text-stroke: 3px $outerSpace;
-                    font-family: Arial, Helvetica, sans-serif;
+               position: relative;
+               overflow: hidden;
+               visibility: hidden;
+
+               > img{
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    transform-origin: left;
                }
           }
 
-          > img{
-               width: 50%;
-
-               position: absolute;
-               bottom: 0;
-               right: 0;
-
-               object-fit: contain;
-          }
      }
 }
