--- a/styles/sass/sections/_contact.scss
+++ b/styles/sass/sections/_contact.scss
@@ -90,6 +90,33 @@
                     transform-origin: left;
                }
           }
+     }
 
+     @media screen and (max-width: 800px) {
+          &__content{
+               padding: 0;
+               width: 100%;
+               
+               &__email{
+                    padding-left: 1em;
+                    > h2{
+                         font-size: 2.5em;
+                    }
+               }
+
+               &__links{
+                    &__list{
+                         justify-content: space-evenly;
+
+                         &-items{
+                              margin: 0;
+                         }
+                    }
+               }
+          }
+
+          &__hero{
+               display: none;
+          }
      }
 }
