--- a/styles/sass/sections/_home.scss
+++ b/styles/sass/sections/_home.scss
@@ -44,6 +44,7 @@
 
                .show-border{
                     padding: 1em 0;
+                    border-bottom: 2px solid #EAEAEA;
                }
 
                &__list{
