--- a/styles/sass/sections/_home.scss
+++ b/styles/sass/sections/_home.scss
@@ -98,26 +98,32 @@
                          &__block1{ 
                               grid-area: 1 / 1 / 3 / 2;
                               background-color: $outerSpace;
+                              // transform: scale(0);
                          }
                          &__block2{ 
                               grid-area: 1 / 2 / 2 / 3;
                               background-color: $brightYellow;
+                              // transform: scale(0);
                          }
                          &__block3{ 
                               grid-area: 2 / 2 / 4 / 3;
                               background-color: $charlestonGreen;
+                              // transform: scale(0);
                          }
                          &__block4{ 
                               grid-area: 3 / 1 / 4 / 2;
                               background-color: $charlestonGreen;
+                              // transform: scale(0);
                          }
                          &__block5{ 
                               grid-area: 4 / 1 / 5 / 2;
                               background-color: $deepMossGreen;
+                              // transform: scale(0);
                          }
                          &__block6{ 
                               grid-area: 4 / 2 / 5 / 3;
                               background-color: $outerSpace;
+                              // transform: scale(0);
                          }
                     }
                }
